# ChangeLog for media-sound/audacious
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.176 2009/09/15 23:16:18 chainsaw Exp $

*audacious-2.2_alpha1 (15 Sep 2009)

  15 Sep 2009; <chainsaw@gentoo.org> +audacious-2.2_alpha1.ebuild:
  Version bump to (masked) alpha release, includes fixes that close bug
  #282637 by Sergey S. Starikoff.

  02 Sep 2009; Jeroen Roovers <jer@gentoo.org> audacious-2.1.ebuild:
  Stable for HPPA (bug #279238).

  31 Aug 2009; Brent Baude <ranger@gentoo.org> audacious-2.1.ebuild:
  Marking audacious-2.1 ppc64 for bug 279238

  28 Aug 2009; Tobias Klausmann <klausman@gentoo.org> audacious-2.1.ebuild:
  Stable on alpha, bug #279238

  02 Aug 2009; nixnut <nixnut@gentoo.org> audacious-2.1.ebuild:
  ppc stable #279238

  02 Aug 2009; Markus Meier <maekke@gentoo.org> audacious-2.1.ebuild:
  x86 stable, bug #279238

  26 Jul 2009; <chainsaw@gentoo.org> audacious-2.1.ebuild:
  Marked stable on AMD64, tested on a dual Opteron 2435 system with a Xonar
  D2X sound card.

*audacious-2.1 (06 Jul 2009)

  06 Jul 2009; <chainsaw@gentoo.org> -audacious-2.1_alpha1.ebuild,
  -audacious-2.1_alpha2.ebuild, +audacious-2.1.ebuild:
  Final release of 2.1; with thanks to all JIRA bug reporters. Deleting
  alpha release ebuilds.

*audacious-2.1_beta1 (26 Jun 2009)

  26 Jun 2009; <chainsaw@gentoo.org> +audacious-2.1_beta1.ebuild:
  First beta for the 2.1 version; many more bug fixes and some GTK+
  performance improvements. No longer masked, please test thoroughly. Bugs
  still upstream please.

*audacious-2.1_alpha2 (23 Jun 2009)

  23 Jun 2009; <chainsaw@gentoo.org> +audacious-2.1_alpha2.ebuild:
  Many bugfixes based on what people reported in the JIRA bug tracker at
  http://jira.atheme.org/; have *you* reported one yet?

  22 Jun 2009; <chainsaw@gentoo.org> audacious-2.0.1.ebuild:
  Revert stable keywords as per the wishes of the reporters in bug #274659.
