@@ -7,6 +7,7 @@ DIST audacious-2.0.1.tgz 1871435 RMD160 5c619c4ec5afa8471baf789b521f83bcaeca9da9
 DIST audacious-2.1-beta1.tgz 1886305 RMD160 43a140a70cb1f884119ad54f374afb8478c33b88 SHA1 08914c3122f72cf017dbaaa98e1706242c489199 SHA256 df640ef569b0d012d653f29c9c7457ff90b8fab158af13438c96809c436d8c98
 DIST audacious-2.1.tgz 1852176 RMD160 ba7c5672654e36ae6fa39a4f68e258363cddaf05 SHA1 520c7192ccb89c65353e2d8840cccef9f11c6a42 SHA256 32e16412d446f32744cb477d5b8a066447c0c826f71347ec653e9a8cb5ce747c
 DIST audacious-2.2-alpha1.tgz 1578467 RMD160 99123dfb6590fef4a166d72dac5730838415c30b SHA1 7d2cae363ab68d8f4cdebc747aba6d41eca2d883 SHA256 c3d034d2a8148af4ed86c52cc3a160c0e61c11e36c005baefcb61a33557dbb76
+DIST audacious-2.2-alpha2.tgz 1579328 RMD160 40874a7bfcc9ff0aa1e3e59ebef34f6fbc32f067 SHA1 496be6d75daf6400dc7235f8b8bc4803f558f355 SHA256 27a9d6eb77c0117fb87dc1261bd1d0deea3e74ef4a4ffa898427213fe4911325
 DIST gentoo_ice-xmms-0.2.tar.bz2 51839 RMD160 11439cbebf8c6dc5745c8593a79e88303d094544 SHA1 e97ebbf204e0d1b150265f9e67f0ed54d779e110 SHA256 d1be63368b76f4a8b1d5b0e955cd7a77177f56a7f0b828c6603d8fd2836422b1
 EBUILD audacious-1.5.1-r1.ebuild 2261 RMD160 511bf43852bba5ac057ef745db191637fdfd78fa SHA1 21c2dd93ac037854db0597c9e9f4931d924a445a SHA256 09e471ea7622ddfeba93a049288f9d74873349fc15ae718d73e2ce16924db57a
 EBUILD audacious-1.5.1.ebuild 2175 RMD160 c4f4515052398aa653e473c2e2846c949b4da4ee SHA1 a88a35b74f6d41d305989ac23c4f267a184ae235 SHA256 79417a00ba0d11278a34bb2a15fb39e482aca1dd7fbc9c161802b43a89569ada
@@ -14,5 +15,6 @@ EBUILD audacious-2.0.1.ebuild 2098 RMD160 248f557e2fd846945e31ea73512e7c53f58c0d
 EBUILD audacious-2.1.ebuild 1928 RMD160 8b968d793c9c695f00b62cb0b73ffccc62da50e0 SHA1 4ec946a1086c59969c53b5ed948de4fef5820683 SHA256 6f4a2c682a7cac63a021d404548339dcc8afda83d06bd29f40636c9f584dfac8
 EBUILD audacious-2.1_beta1.ebuild 1945 RMD160 2838294e507d31eb8104bbb69833a32b9df65e9a SHA1 f66d0fa0765779df1c0b16d5697c6cbe535024a2 SHA256 680de5e06952f2da71e0ed810ac09590a72d7c441313d29a62bb4a753d4f9fc4
 EBUILD audacious-2.2_alpha1.ebuild 1947 RMD160 5b50859c5f383bf66661e1726d68f17bce6e5d75 SHA1 30befd1639e21170c29a62b676a5717fe1969029 SHA256 d8996fe23a2aa9b0487b5e7702786fd2ef44317a93d4f87d40e439326237e189
-MISC ChangeLog 30552 RMD160 b2afa24c6860e614d71a7abb427507e983f00b83 SHA1 11b12e9271d1bf7270b2dddc5b93ade78920b9ed SHA256 3d1c37fb708800de53562d43602124fe459244c6082f5c8b8f44fc4f35340e15
+EBUILD audacious-2.2_alpha2.ebuild 1947 RMD160 b5db8d1ea044fa5282659da125f8b1093e4af658 SHA1 d5203e74a0a8bdcebebba86fa60f5774a102a4a6 SHA256 4c2df076b8b4d8b83a3d34a56ec8bb83f50d5c86defa93c9bf9829425194a3dd
+MISC ChangeLog 30714 RMD160 aebcc719e4b25c9e9594e99462e34b6bcf11fbff SHA1 f457faf7cd8f07d67068d98895e35cf3d4334811 SHA256 3f6e98fe9986befdce9b3e0720235e90606f0a8294f3a61a18ee1b451ad72fd8
 MISC metadata.xml 363 RMD160 fba132fb7596814a0d7e42330a5703dc4afa32dc SHA1 2a77afacfd9e5628bd59bfc6332320302d3a6387 SHA256 cc833502f2ab5b13e4b22684d0f7bec07804c3aa2daccaee913297853e6e5b07
