@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/audacious
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.176 2009/09/15 23:16:18 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.177 2009/10/04 21:50:17 chainsaw Exp $
+
+*audacious-2.2_alpha2 (04 Oct 2009)
+
+  04 Oct 2009; <chainsaw@gentoo.org> +audacious-2.2_alpha2.ebuild:
+  New alpha release, still masked. Bugs upstream please.
 
 *audacious-2.2_alpha1 (15 Sep 2009)
 
